--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -134,7 +134,7 @@ input[type="text"] {
 
 @media only screen and (min-width: 640px) {
   .app-modal-large{
-    height: 80vh;
+    height: 80dvh;
     margin-top: 5vh;
     margin-bottom: 5vh;
     max-width: 90%;
@@ -142,7 +142,7 @@ input[type="text"] {
   }
   
   .app-modal-mini{
-    height: 40vh;
+    height: 40dvh;
     margin-top: 5vh;
     margin-bottom: 35vh;
     max-width: 90%;
