--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,12 +19,12 @@ body{
 }
 
 .app-modal-large{
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
 .app-modal-mini{
-  height: 100vh;
+  height: 100dvh;
   width: 100vw;
 }
 
